# Image-Guided-Navigation-for-Robotics

./: README.md
path_planning_3dslicer/: CMakeLists.txt
path_planning_3dslicer/PathPlanningMod/: .env  CMakeLists.txt  PathPlanningMod.py
path_planning_3dslicer/PathPlanningMod/Resources/UI/: PathPlanningMod.ui
robot_simulation_ros2_workspace/src/my_robot_goal/: package.xml  setup.cfg  setup.py
robot_simulation_ros2_workspace/src/my_robot_goal/config/: motion_planning.yaml
robot_simulation_ros2_workspace/src/my_robot_goal/launch/: robot_plan.launch.py
robot_simulation_ros2_workspace/src/my_robot_goal/my_robot_goal/: check_polydata.py  mesh_processor.cpp  my_robot_goal.py  test_transform_sender.py
robot_simulation_ros2_workspace/src/six_dof_arm_description/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
robot_simulation_ros2_workspace/src/six_dof_arm_description/launch/: display.launch.py
robot_simulation_ros2_workspace/src/six_dof_arm_description/urdf/: six_dof_arm.urdf  (+1 more)
robot_simulation_ros2_workspace/src/six_dof_arm_moveit/: .setup_assistant  CMakeLists.txt  package.xml
robot_simulation_ros2_workspace/src/six_dof_arm_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  six_dof_arm.ros2_control.xacro  six_dof_arm.srdf
robot_simulation_ros2_workspace/src/six_dof_arm_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
